<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding10"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btn_crash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crash" />

    <Button
        android:id="@+id/btn_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get" />

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean" />

    <Button
        android:id="@+id/btn_my_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_view" />

    <Button
        android:id="@+id/btn_app_compat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:text="@string/app_compat" />

</LinearLayout>
